--- a/ClothingShopT1/userprofile.html
+++ b/ClothingShopT1/userprofile.html
@@ -23,7 +23,7 @@
     </nav>
     <main>
   <h2>User Profile</h2>
-  <img src="user.png" alt="User Profile Pic">
+  <img src="User.png" alt="User Profile Pic">
   <p>First Name: Juan</p>
   <p>Last Name: Dela Cruz</p>
   <p>Email Address: juandelacruz@example.com</p>
@@ -38,4 +38,5 @@
     <p>Contact: FeatClothing@gmail.com</p>
   </footer>
   <script src="navbar.js"></script>
+
 </html>
