--- a/ClothingShopT1/index.html
+++ b/ClothingShopT1/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Feat - Home</title>
   <link rel="stylesheet" href="style.css">
 </head>
@@ -59,4 +60,5 @@
   </footer>
   <script src="navbar.js"></script>
 </body>
+
 </html>
