--- a/ClothingShopT1/signup.html
+++ b/ClothingShopT1/signup.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Feat - Sign Up</title>
   <link rel="stylesheet" href="style.css">
 </head>
@@ -58,3 +59,4 @@
   <script src="signup.js"></script>
 </body>
 </html>
+
