--- a/ClothingShopT1/userprofile.html
+++ b/ClothingShopT1/userprofile.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Feat - Profile</title>
   <link rel="stylesheet" href="style.css">
 </head>
@@ -40,6 +41,7 @@
   <script src="navbar.js"></script>
 
 </html>
+
 
 
 
