--- a/ClothingShopT1/index.html
+++ b/ClothingShopT1/index.html
@@ -7,12 +7,11 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="container">
-    <header>
+   <header>
     <img src="logo.png" alt="Company Logo" class="logo">
     <h1>Feat Clothing</h1>
   </header>
-    
+  <div class="container">
     <nav class="sidebar" aria-label="Main Navigation">
       <ul id="navLinks">
     <li><a href="index.html">Home</a></li>
@@ -20,9 +19,7 @@
     <li><a href="contact.html">Contact Us</a></li>
     <li id="loginLink"><a href="login.html">Log in</a></li>
     <li id="profileLink" style="display:none;"><a href="userprofile.html">Profile</a></li>
-    <li id="logoutLink" style="display:none;"><a href="#" id="logoutBtn">Logout</a></li>
-</ul>
-
+    <li id="logoutLink" style="display:none;"><a href="#" id="logoutBtn">Logout</a></li></ul>
     </nav>
 
     <main>
@@ -52,14 +49,14 @@
         </article>
       </section>
     </main>
-
+  </div>
   <footer>
     <p>&copy; 2026 Feat Clothing</p>
     <p>Contact: FeatClothing@gmail.com</p>
   </footer>
-  </div>
   <script src="navbar.js"></script>
 </body>
 
 </html>
+
 
