--- a/ClothingShopT2/PaymentandDelivery.html
+++ b/ClothingShopT2/PaymentandDelivery.html
@@ -36,8 +36,8 @@
     Credit/Debit Card
   </label>
   <label>
-    <input type="radio" name="payment" value="PayPal">
-    PayPal
+    <input type="radio" name="payment" value="E-wallet">
+    E-wallet
   </label>
   <label>
     <input type="radio" name="payment" value="Cash on Delivery">
@@ -80,3 +80,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
