--- a/ClothingShopT2/confirmation.html
+++ b/ClothingShopT2/confirmation.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Feat - Payment & Delivery</title>
+  <title>Feat - Receipt</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -79,3 +79,4 @@
 <script src="script.js"></script>
 </body>
 </html>
+
