--- a/ClothingShopT1/cart.html
+++ b/ClothingShopT1/cart.html
@@ -37,7 +37,7 @@
             <th scope="col">Remove</th>
           </tr>
         </thead>
-        <tbody>
+        <tbody id="cartItems">
           <tr>
             <td>
               <img src="product1.png" alt="White Shirt" class="cart-img">
@@ -80,6 +80,7 @@
   </footer>
   <script src="script.js"></script>
 </html>
+
 
 
 
