--- a/ClothingShopT1/cart.html
+++ b/ClothingShopT1/cart.html
@@ -38,7 +38,26 @@
           </tr>
         </thead>
         <tbody id="cartItems">
-          
+          <tr>
+            <td>
+              <img src="product1.png" alt="White Shirt" class="cart-img">
+              <span>White Shirt</span>
+            </td>
+            <td>₱700</td>
+            <td><input type="number" value="1" min="1" aria-label="Quantity for White Shirt"></td>
+            <td>₱700</td>
+            <td><button class="remove-btn" aria-label="Remove White Shirt">✖</button></td>
+          </tr>
+          <tr>
+            <td>
+              <img src="product3.png" alt="Sweat Pants" class="cart-img">
+              <span>Sweat Pants</span>
+            </td>
+            <td>₱800</td>
+            <td><input type="number" value="2" min="1" aria-label="Quantity for Sweat Pants"></td>
+            <td>₱800</td>
+            <td><button class="remove-btn" aria-label="Remove Sweat Pants">✖</button></td>
+          </tr>
         </tbody>
       </table>
 
@@ -61,6 +80,7 @@
   </footer>
   <script src="script.js"></script>
 </html>
+
 
 
 
