--- a/ClothingShopT1/confirmation.html
+++ b/ClothingShopT1/confirmation.html
@@ -48,7 +48,7 @@
           <th>Price</th>
         </tr>
       </thead>
-      <tbody id="receiptItems">
+      <tbody>
         <tr>
           <td>White Shirt</td>
           <td>1</td>
@@ -80,3 +80,4 @@
 <script src="script.js"></script>
 </body>
 </html>
+
