--- a/ClothingShopT1/confirmation.html
+++ b/ClothingShopT1/confirmation.html
@@ -36,7 +36,7 @@
 
     <div class="receipt-details">
       <p><strong>Order Number:</strong> #123456</p>
-      <p><strong>Date:</strong> January 26, 2026</p>
+      <p><strong>Date:</strong> <span id="receiptDate"></span></p>
       <p><strong>Payment Method:</strong> Cash on Delivery</p>
     </div>
 
@@ -80,4 +80,5 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
