--- a/jalabarentoclothingshop/index.html
+++ b/jalabarentoclothingshop/index.html
@@ -1,27 +1,16 @@
 <!doctype html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<link
-			rel="icon"
-			type="image/svg+xml"
-			href="/jalabarentoclothingshop/vite.svg"
-		/>
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>jalabarentoclothingshop</title>
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/jalabarentoclothingshop/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>jalabarentoclothingshop</title>
+   
+    <script type="module" crossorigin src="/jalabarentoclothingshop/assets/index.js"></script>
+    <link rel="stylesheet" crossorigin href="/jalabarentoclothingshop/assets/index.css">
+  </head>
+  <body>
+    <div id="root"></div>
 
-		<script
-			type="module"
-			crossorigin
-			src="/jalabarentoclothingshop/assets/index.js"
-		></script>
-		<link
-			rel="stylesheet"
-			crossorigin
-			href="/jalabarentoclothingshop/assets/index.css"
-		/>
-	</head>
-	<body>
-		<div id="root"></div>
-	</body>
+  </body>
 </html>
